# CrescendoDB

./: .gitignore
CrescendoDBProject/: CrescendoDBProject.sln
CrescendoDBProject/CrescendoDBProject/: Attribute.h  BTree.h  BTreeNode.h  BinaryWriter.h  CrescendoDBProject.cpp  CrescendoDBProject.h  CrescendoDBProject.vcxproj  CrescendoDBProject.vcxproj.filters  DataGenerator.h  PageManager.h  Person.h  Record.h  Varchar.h
CrescendoDatabaeEngine/: CMakeLists.txt  CrescendoDatabaeEngine.sln
CrescendoDatabaeEngine/CrescendoDatabaeEngine/: CrescendoDatabaeEngine.cpp  CrescendoDatabaeEngine.vcxproj  CrescendoDatabaeEngine.vcxproj.filters
CrescendoDatabaeEngine/include/: crescendo_api.h  crescendo_btree.h  crescendo_database_manager.h  crescendo_parser.h  page.h  page_manager.h  query_executor.h  storage_manager.h  transaction_manager.h
CrescendoDatabaeEngine/src/: crescendo_api.cpp  crescendo_btree.cpp  crescendo_parser.cpp  main.cpp  query_executor.cpp  storage_manager.cpp  transaction_manager.cpp
Qt-Creator Crescendo proejct/crescendoDB/: crescendoDB.pro
Qt-Creator Crescendo proejct/crescendoDB/crescendoDB/: Defines.pri  crescendoDB.pro  crescendodb.cpp  crescendodb.h
Qt-Creator Crescendo proejct/crescendoDB/crescendoDB-CLI/: crescendoDB-CLI.pro
Qt-Creator Crescendo proejct/crescendoDB/crescendoDB-tests/: crescendoDB-tests.pro
